--- a/var/httpd/htdocs/js/test/JSUnitTest-TimeAccounting.html
+++ b/var/httpd/htdocs/js/test/JSUnitTest-TimeAccounting.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <link rel="stylesheet" href="../thirdparty/qunit/qunit.css" type="text/css"/>
+    <link rel="stylesheet" href="../thirdparty/qunit-1.11.0/qunit-1.11.0.css" type="text/css"/>
 
     <title>TimeAccounting for OTRS 3.0 &ndash; UnitTest Results</title>
 </head>
@@ -14,12 +14,12 @@
 
 
     <!-- UnitTest code goes here -->
-    <script type="text/javascript" src="../thirdparty/qunit/qunit.js"></script>
+    <script type="text/javascript" src="../thirdparty/qunit-1.11.0/qunit-1.11.0.js"></script>
     <!--
         Now always load library first and then the UnitTest file for it.
         The UnitTest file is responsible for runnint the tests.
     -->
-    <script type="text/javascript" src="../thirdparty/jquery-1.4.4/jquery.js"></script>
+    <script type="text/javascript" src="../thirdparty/jquery-1.10.0/jquery.js"></script>
 
     <script type="text/javascript" src="../Core.Exception.js"></script>
     <script type="text/javascript" src="../Core.Debug.js"></script>
@@ -29,8 +29,9 @@
     <script type="text/javascript" src="../Core.JSON.js"></script>
     <script type="text/javascript" src="../Core.Config.js"></script>
 
-    <script type="text/javascript" src="../thirdparty/jquery-ui-1.8.7/jquery-ui.js"></script>
-    <script type="text/javascript" src="../thirdparty/jquery-validate-1.7/jquery.validate.js"></script>
+    <script type="text/javascript" src="../thirdparty/jquery-ui-1.10.3/jquery-ui.js"></script>
+    <script type="text/javascript" src="../thirdparty/jquery-validate-1.11.1/jquery.validate.js"></script>
+    <script type="text/javascript" src="../Core.App.js"></script>
     <script type="text/javascript" src="../Core.UI.Dialog.js"></script>
     <script type="text/javascript" src="../Core.Form.ErrorTooltips.js"></script>
     <script type="text/javascript" src="../Core.UI.Accessibility.js"></script>
